--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<script src="adSense.js"></script>
 <!doctypehtml>
 	<html lang=en>
 	<title>JollyWorld - Face gory levels of fun. Unblocked - ClassRoom6x</title>
